--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "ledgr/amount",
     "description": "Handle monetary amounts using bcmath for arithmetic precision",
-    "keywords": ["monetary amount", "economics"],
+    "keywords": ["monetary amount", "economics", "money"],
     "homepage": "https://github.com/ledgr/amount",
     "type": "library",
     "license": "WTFPL",
@@ -17,6 +17,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3",
+        "ext-bcmath": "*"
     }
 }
