--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: php
 
 php:
-    - hhvm
-    - 5.6
-    - 5.5
-    - 5.4
+  - hhvm
+  - 5.6
+  - 5.5
+  - 5.4
 
 script:
-    - phpunit
+  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then phpunit --coverage-clover=coverage.clover ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != '5.6' ]]; then phpunit ; fi
+
+after_script:
+  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then wget https://scrutinizer-ci.com/ocular.phar ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover ; fi
