--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ php:
   - 5.5
   - 5.4
 
+install:
+  - if [[ "$TRAVIS_PHP_VERSION" == '5.4' ]]; then composer install ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != '5.4' ]]; then composer require hanneskod/readme-tester:dev-master ; fi
+
 script:
   - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then phpunit --coverage-clover=coverage.clover ; fi
   - if [[ "$TRAVIS_PHP_VERSION" != '5.6' ]]; then phpunit ; fi
