--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,17 @@ sudo: false
 language: php
 
 php:
-  - hhvm
+  - 7.2
   - 7.1
   - 7.0
-  - 5.6
-  - 5.5
-  - 5.4
 
 install:
-  - if [[ "$TRAVIS_PHP_VERSION" == '5.4' ]]; then composer install ; fi
-  - if [[ "$TRAVIS_PHP_VERSION" != '5.4' ]]; then composer require hanneskod/readme-tester:dev-master ; fi
+  - composer require hanneskod/readme-tester:1.0-beta.3
 
 script:
-  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then phpunit --coverage-clover=coverage.clover ; fi
-  - if [[ "$TRAVIS_PHP_VERSION" != '5.6' ]]; then phpunit ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == '7.0' ]]; then phpunit --coverage-clover=coverage.clover ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != '7.0' ]]; then phpunit ; fi
 
 after_script:
-  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then wget https://scrutinizer-ci.com/ocular.phar ; fi
-  - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == '7.0' ]]; then wget https://scrutinizer-ci.com/ocular.phar ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == '7.0' ]]; then php ocular.phar code-coverage:upload --format=php-clover coverage.clover ; fi
