--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require-dev": {
         "ext-intl": "*",
-        "alcohol/iso4217": "^3"
+        "alcohol/iso4217": "^3",
+        "phpunit/phpunit": "^6"
     }
 }
